--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<ros-my-test></ros-my-test>
-<div class="red">text</div>
-<button class="btn btn-primary">Test</button>
+
+<a routerLink="/">Home</a>
+<a routerLink="/test">Test</a>
+<router-outlet></router-outlet>
