--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,8 @@
-<p>navigation works!</p>
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <div class="nav navbar-nav">
+      <a class="nav-item nav-link" routerLink="/">Home</a>
+      <a class="nav-item nav-link" routerLink="test/">Test</a>
+      <a class="nav-item nav-link" routerLink="/products">Products</a>
+      <a class="nav-item nav-link" routerLink="/contact">Contact</a>
+  </div>
+</nav>
