--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,2 +1,2 @@
-<button class="btn btn-danger" routerLink="add">Add new product</button>
+<button class="btn btn-danger" routerLink="/products/add">Add new product</button>
 <p>product-list works!</p>
