--- a/src/app/test-child/test-child.component.html
+++ b/src/app/test-child/test-child.component.html
@@ -1,3 +1,6 @@
-<p>test-child works! data from parent:</p>
-<div class="alert alert-info">{{ uppercaseTestData }}</div>
-<button class="btn btn-outline-primary" (click)="handleCounterClick()">Click</button>
+
+<div [style]="'background-color: ' +   bgColor ">
+  <p>test-child works! data from parent:</p>
+  <div class="alert alert-info">{{ uppercaseTestData }}</div>
+  <button class="btn btn-outline-primary" (click)="handleCounterClick()">Click</button>
+</div>
