refactor, prettier, products list

--- a/src/app/main/contact/contact.component.html
+++ b/src/app/main/contact/contact.component.html
@@ -1,2 +1,5 @@
-<p>contact works!</p>
-{{ 2 | test : 10}}
+<h6>Reactive form</h6>
+<ros-contact-reactive></ros-contact-reactive>
+<hr>
+<h6>Template-driven form</h6>
+<ros-contact-template></ros-contact-template>
