--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -1,1 +1,33 @@
-<p>product-form works!</p>
+<form>
+  <div class="form-group">
+    <label>Name</label>
+    <input type="text" class="form-control form-control-sm" />
+  </div>
+
+  <div class="form-group">
+    <label>Price</label>
+    <input type="number" class="form-control form-control-sm" />
+  </div>
+
+  <div class="form-group">
+    <label>Category</label>
+    <select class="form-control form-control-sm">
+      <option value="none" hidden>
+        Select Category
+      </option>
+      <option value="food">Food</option>
+      <option value="electronic">Electronic</option>
+      <option value="other">Other</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label>Description</label>
+    <textarea class="form-control form-control-sm"></textarea>
+  </div>
+  <div class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" id="customCheck1" />
+    <label class="custom-control-label" for="customCheck1">Is active</label>
+  </div>
+  <button class="btn btn-warning mt-2">Save</button>
+</form>
