--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,3 +1,3 @@
-<ng-container *ngIf="product$ | async as product">
-  <ros-product-form [product]="product" (save)="handleSave($event)"></ros-product-form>
+<ng-container *ngIf="formData$ | async as formData">
+  <ros-product-form [product]="formData[0]" [categories]="formData[1]" (save)="handleSave($event)"></ros-product-form>
 </ng-container>
