--- a/src/app/test/my-test/my-test.component.scss
+++ b/src/app/test/my-test/my-test.component.scss
@@ -1,3 +1,12 @@
 .red {
   color: maroon;
 }
+
+.color1 {
+  background-color: tomato;
+  color: white;
+}
+.color2 {
+  background-color: royalblue;
+  color: white;
+}
