--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,4 +1,10 @@
 <button class="btn btn-danger mb-2" routerLink="/products/add">Add new product</button>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item" *rosRange="let itemNumber dupa 5; let d = double"><a class="page-link" >{{itemNumber}} ({{d}})</a></li>
+  </ul>
+</nav>
 <div class="list-group" *ngIf="products$ | async as products">
   <ros-product-item [product]="product" *ngFor="let product of products"></ros-product-item>
 </div>
