--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ros-navigation></ros-navigation>
 <router-outlet></router-outlet>
 <ros-loader *ngIf="false"></ros-loader>
+<ros-notification-container></ros-notification-container>
