--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -9,3 +9,5 @@
   <ros-product-item [product]="product" *ngFor="let product of products"></ros-product-item>
 </div>
 
+
+<ros-loader *ngIf="pending$ | async"></ros-loader>
