--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -30,3 +30,4 @@
   </div>
   <button class="btn btn-warning mt-2">Save</button>
 </form>
+<div class="form-errors" *ngIf="productForm.invalid">Form is invlid!!</div>
